--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to Divvy! Build Divvy in Xcode 5.1 on Mac OS X 10.9 (earlier versions may work) and then play around with the data in Sample Datasets/. Right click on any dataset view to export your results as .csv or the view as .png. Export data from Matlab or R using the scripts in Exporters/. Visit Divvy on the web at http://divvy.ucsd.edu for a demo video and more.
+Welcome to Divvy! Build Divvy in Xcode 5.1 on Mac OS X 10.9 (earlier versions may work) and then play around with the data in Sample Datasets/. Right click on any dataset view to export your results as .csv or the view as .png. Export data from Matlab, R, or Python using the scripts in Exporters/. Visit Divvy on the web at http://divvy.ucsd.edu for a demo video and more.
 
 Divvy works with dense, numeric datasets. Some plugins, such as tSNE, may take a very long time to compute depending on the size of the dataset.
 
